--- a/app/javascript/chitchat/styles/application.scss
+++ b/app/javascript/chitchat/styles/application.scss
@@ -14,13 +14,15 @@ $space: (
   xlarge: 50px,
   large: 30px,
   medium: 20px,
-  small: 10px
+  small: 10px,
+  xsmall: 5px
 );
 
 $font-size: (
   xlarge: 28px,
   large: 24px,
   medium: 18px,
+  small: 14px
 );
 
 $breakpoints: (
@@ -63,7 +65,7 @@ html, body, #main, .app {
 }
 
 body {
-  background-color: map-get($color, lightest);
+  background-color: map-get($color, white);
   color: map-get($color, medium);
   font-family: 'Courier New', Courier, monospace;
   font-size: map-get($font-size, medium);
@@ -189,20 +191,29 @@ fieldset {
   height: 100%;
   max-height: 100%;
   overflow: auto;
-  padding: map-get($space, small);
 
   &__message {
-    margin-top: map-get($space, small);
-
-    &:last-child {
-      margin-top: 0;
-    }
+    padding: map-get($space, small);
   }
 }
 
 .message {
+  &:hover {
+    background-color: map-get($color, lightest);
+  }
+
   &__username {
     font-weight: bold;
+  }
+
+  &__timestamp {
+    color: map-get($color, light);
+    font-size: map-get($font-size, small);
+    margin-left: map-get($space, small);
+  }
+
+  &__content {
+    margin-top: map-get($space, xsmall);
   }
 }
 
